--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ section.allElems {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 30px 40px;
+  padding: 20px 40px;
 }
 
 header .header1 h1 {
@@ -122,6 +122,10 @@ header .header2 h3 {
   -ms-flex-align: start;
   align-items: flex-start;
   gap: 22px;
+}
+
+.allElems::-webkit-scrollbar {
+  display: none;
 }
 
 .elem {
@@ -173,9 +177,9 @@ header .header2 h3 {
   right: 5%;
   background-color: var(--red);
   border-radius: 10px;
-  padding: 15px 22px;
+  padding: 10px 15px;
   border: none;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: 500;
   cursor: pointer;
 }
@@ -185,13 +189,13 @@ header .header2 h3 {
 }
 
 .todo-list-fullpage h2 {
-  font-size: 65px;
+  font-size: 35px;
 }
 
 .todo-list-fullpage .todo-container {
-  height: 80%;
+  height: 70%;
   width: 100%;
-  margin-top: 40px;
+  margin-top: 25px;
 
   display: -webkit-box;
 
@@ -224,45 +228,44 @@ header .header2 h3 {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
-  padding: 30px;
+  padding: 20px;
 }
 
 .todo-container .addTask form #task-input {
-  padding: 15px 25px;
+  padding: 10px 18px;
   width: 100%;
-  font-size: 29px;
+  font-size: 20px;
   border-radius: 5px;
   background-color: var(--pri);
   color: var(--sec);
   border: none;
   outline: none;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-weight: 500;
 }
 
 .todo-container .addTask form textarea {
-  padding: 15px 25px;
+  padding: 10px 18px;
   width: 100%;
-  font-size: 29px;
+  font-size: 20px;
   background-color: var(--pri);
   color: var(--sec);
   border-radius: 5px;
   font-weight: 500;
   border: none;
   outline: none;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .todo-container .addTask form button {
-  padding: 15px 25px;
+  padding: 10px 20px;
   width: 100%;
-  font-size: 26px;
+  font-size: 20px;
   background-color: var(--tri1);
   border-radius: 5px;
   border: none;
   font-weight: 700;
   outline: none;
-  margin-bottom: 20px;
   -webkit-transition: all ease 0.3s;
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
