--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Root Variables */
 :root {
   --pri: #f8f4e1;
   --sec: #381c0a;
@@ -10,7 +9,6 @@
   --black: black;
 }
 
-/* Font Setup */
 @font-face {
   font-family: aeonik;
   font-weight: 200;
@@ -32,7 +30,6 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: aeonik;
   color: var(--pri);
@@ -66,14 +63,8 @@ section.allElems {
   background-position: center;
   margin-bottom: 20px;
   border-radius: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 20px 40px;
 }
@@ -113,13 +104,8 @@ header .header2 h3 {
 }
 
 .allElems .allFeatures {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   gap: 22px;
 }
@@ -134,18 +120,14 @@ header .header2 h3 {
   border-radius: 10px;
   overflow: hidden;
   position: relative;
-  -webkit-transition: all ease 0.2s;
-  -o-transition: all ease 0.2s;
   transition: all ease 0.2s;
   cursor: pointer;
-  -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
 }
 
 .elem img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
   object-fit: cover;
 }
 
@@ -196,17 +178,8 @@ header .header2 h3 {
   height: 70%;
   width: 100%;
   margin-top: 25px;
-
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -218,15 +191,8 @@ header .header2 h3 {
 }
 
 .todo-list-fullpage .todo-container .addTask form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   padding: 20px;
 }
@@ -266,8 +232,6 @@ header .header2 h3 {
   border: none;
   font-weight: 700;
   outline: none;
-  -webkit-transition: all ease 0.3s;
-  -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
 
@@ -280,29 +244,16 @@ header .header2 h3 {
   background-color: var(--tri2);
   height: 100%;
   border-radius: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   padding: 30px;
   overflow: auto;
 }
 
 .task {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
   background-color: var(--pri);
@@ -314,11 +265,7 @@ header .header2 h3 {
 .task h5 {
   color: var(--sec);
   font-size: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   gap: 5px;
 }
@@ -354,14 +301,8 @@ header .header2 h3 {
 }
 
 .mark-imp {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
   padding: 10px 10px;
   margin-bottom: 20px;
@@ -388,26 +329,15 @@ header .header2 h3 {
   width: 100%;
   border-radius: 10px;
   padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   overflow: auto;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .daily-planner-fullpage .day-planner .day-planner-time {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   position: relative;
   width: 49%;
@@ -436,14 +366,8 @@ header .header2 h3 {
 .motivation-fullPage-container {
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -462,7 +386,6 @@ header .header2 h3 {
   background-color: var(--tri1);
   border-radius: 50px;
   scale: 1.15;
-  -webkit-filter: blur(100px);
   filter: blur(100px);
   z-index: 8;
 }
@@ -470,7 +393,6 @@ header .header2 h3 {
 .motivational-fullpage .motivation-container .motivation-wrapper {
   z-index: 10;
   position: absolute;
-
   width: 100%;
   background-color: var(--tri1);
   padding: 20px;
@@ -479,14 +401,8 @@ header .header2 h3 {
 }
 
 .motivation-1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
 }
 
@@ -495,8 +411,6 @@ header .header2 h3 {
   padding: 30px;
   border-radius: 20px;
   font-size: 25px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
   font-weight: 500;
   text-align: right;
@@ -515,14 +429,8 @@ header .header2 h3 {
 }
 
 .motivation-3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
   justify-content: flex-end;
 }
 
@@ -531,8 +439,6 @@ header .header2 h3 {
   padding: 30px;
   border-radius: 20px;
   font-size: 40px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
   font-weight: 500;
   text-align: right;
@@ -554,8 +460,6 @@ header .header2 h3 {
   position: absolute;
   top: 45%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -571,16 +475,12 @@ header .header2 h3 {
   margin: 10px;
   border-radius: 5px;
   border: none;
-  -webkit-box-shadow: 7px 7px 0px var(--black);
   box-shadow: 7px 7px 0px var(--black);
-  -webkit-transition: all ease 0.1s;
-  -o-transition: all ease 0.1s;
   transition: all ease 0.1s;
   font-weight: 700;
 }
 
 .pomo-timer button:active {
-  -webkit-box-shadow: 0px 0px 0px var(--black);
   box-shadow: 0px 0px 0px var(--black);
 }
 
@@ -588,8 +488,6 @@ header .header2 h3 {
   position: absolute;
   top: 20%;
   left: 50%;
-  -webkit-transform: translate(-50%, 0);
-  -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   background-color: var(--green);
   padding: 15px 30px;
@@ -608,17 +506,9 @@ nav {
 }
 
 .nav-in {
-  display: -webkit-box;
-
-  display: -ms-flexbox;
-
   display: flex;
   background-color: var(--tri2);
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 15px 25px;
   border-radius: 10px;
@@ -633,8 +523,6 @@ nav {
   background-color: var(--pri);
   padding: 12px 20px;
   border-radius: 10px;
-  -webkit-transition: all ease 0.2s;
-  -o-transition: all ease 0.2s;
   transition: all ease 0.2s;
   cursor: pointer;
 }
@@ -648,4 +536,254 @@ nav {
 
 .theme:active {
   scale: 0.96;
+}
+
+/* Responsiveness Code */
+
+@media screen and (max-width: 1024px) {
+  #main {
+    height: auto;
+    min-height: 100vh;
+    padding-top: 100px;
+    padding-bottom: 40px;
+  }
+
+  section.allElems {
+    position: relative;
+    height: auto;
+    overflow: visible;
+    padding: 20px;
+  }
+
+  .fullElem {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    padding: 80px 20px 40px 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  nav {
+    padding: 10px 15px;
+    position: fixed;
+    width: 100%;
+  }
+
+  .nav-in {
+    padding: 10px 15px;
+  }
+
+  .nav-in h2 {
+    font-size: 18px;
+  }
+
+  .theme {
+    padding: 8px 12px;
+  }
+
+  .theme h4 {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .allElems header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 30px 20px;
+    background-position: left;
+    height: auto;
+  }
+
+  header .header1,
+  header .header2 {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 20px;
+  }
+
+  header .header1 h1 {
+    font-size: 40px;
+    margin-bottom: 10px;
+    line-height: 1.1;
+  }
+
+  header .header2 h2 {
+    font-size: 32px;
+    line-height: 1.2;
+  }
+
+  header .header2 h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .allElems .allFeatures {
+    justify-content: center;
+    gap: 20px;
+    padding-bottom: 50px;
+  }
+
+  .elem {
+    width: 100%;
+    height: 250px;
+  }
+
+  .elem h2 {
+    font-size: 24px;
+    bottom: 15px;
+    right: 15px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .todo-list-fullpage .todo-container {
+    flex-direction: column;
+    height: auto;
+    gap: 30px;
+  }
+
+  .todo-list-fullpage .todo-container .addTask {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+  }
+
+  .todo-container .addTask form #task-input,
+  .todo-container .addTask form textarea {
+    font-size: 16px;
+    padding: 15px;
+  }
+
+  .todo-list-fullpage .todo-container .allTask {
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+    padding: 15px;
+  }
+
+  .task {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+    padding: 15px;
+  }
+
+  .task h5 {
+    font-size: 20px;
+    line-height: 1.3;
+  }
+
+  .task button {
+    width: 100%;
+    padding: 12px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .daily-planner-fullpage .day-planner {
+    flex-direction: column;
+    height: auto;
+    overflow: visible;
+    padding: 10px;
+  }
+
+  .daily-planner-fullpage .day-planner .day-planner-time {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .day-planner .day-planner-time input {
+    font-size: 18px;
+    padding: 35px 20px 15px 20px;
+  }
+
+  .day-planner .day-planner-time p {
+    top: 10px;
+    left: 20px;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .motivational-fullpage .motivation-container {
+    width: 100%;
+    height: auto;
+    min-height: 60vh;
+    border-radius: 20px;
+  }
+
+  .motivational-fullpage .motivation-container .motivation-wrapper {
+    position: relative;
+    height: auto;
+    padding: 20px 15px;
+  }
+
+  .motivation-1 {
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .motivation-1 h2,
+  .motivation-3 h2 {
+    font-size: 18px;
+    padding: 15px;
+    text-align: center;
+    width: 100%;
+  }
+
+  .motivation-2 {
+    padding: 10px;
+    margin: 20px 0;
+  }
+
+  .motivation-2 h1 {
+    font-size: 32px;
+    text-align: center;
+    word-wrap: break-word;
+  }
+
+  .motivation-3 {
+    justify-content: center;
+  }
+
+  .motivational-fullpage .motivation-container .motivation-wrapper img {
+    height: 60px;
+    top: 10px;
+    right: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .pomodoro-fullpage .pomo-timer {
+    position: relative;
+    top: auto;
+    left: auto;
+    transform: none;
+    margin-top: 100px;
+    width: 100%;
+  }
+
+  .pomo-timer h1 {
+    font-size: 80px;
+    margin-bottom: 20px;
+  }
+
+  .pomodoro-fullpage .session {
+    position: relative;
+    top: auto;
+    left: auto;
+    transform: none;
+    display: inline-block;
+    margin: 0 auto 30px auto;
+    width: fit-content;
+  }
+
+  .pomodoro-fullpage {
+    padding-top: 30px;
+  }
 }
